feat: allow inheriting org reporters for domains
AM-3268